# finice

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  finice.py  mkdocs.yml  pyproject.toml
.devcontainer/: backend.prod.Dockerfile  devcontainer.json  docker-compose.yaml  example.env
app/: startup.py
archive/multitest/: menu.py  rete.js  rete.py  workaround.py
archive/nice-baklava/: baklava.js  baklava.py
archive/nice-litegraph/: graph.py  litegraph.md
archive/nice-rete/: main.py  rete.py  test.py
archive/nice-rete/rete/: serialization.js
archive/nice-vueflow/: theme.py  vueflow.py  vueflow.vue
archive/routertest/: main.py  spa_page.py
cfg/dolt/: config.json
cfg/dolt-server/: config.yaml
cfg/dolt-workbench/: store.json
doc/: environment.md
docs/: devenv.md  index.md  modules.md
multitest/: example_pages.py  home_page.py  main.py
nice-baklava/: main.py  theme.py
nice-rete/: main.py  rete.js  rete.py  test.py
nice-rete/rete/: nicenode.js  serialization.js
nice-vueflow/: main.py
old.devcontainer/: backend.dev.Dockerfile  devcontainer copy.json  devcontainer.json  docker-compose.dev.yaml  docker-compose.yaml  old2.devcontainer.json
routertest/: router.py  spa_api_router.py
src/: graph.js  main.py
src/pages/: index.py
src/theme/: __init__.py  frame.py  menu.py  primary_side_bar.py
temp.devcontainer/backend/: devcontainer.json
temp.devcontainer/database/: devcontainer.json
tests/: conftest.py  test_foo.py
tsrete/: main.py  rete.py  rete.vue  rete_editor.js  theme.py
