[tool.poetry]
name = "finice"
version = "0.1.0"
description = ""
authors = ["Bnaard <bnaard@gmx.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-socketio = "<5.10.0"
nicegui = "^1.3.16"
pyscss = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
